[project]
name = "pressbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "google-genai>=1.5.0",
    "inspect-ai>=0.3.72",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "loguru>=0.7.3",
    "openai>=1.66.3",
    "python-dotenv>=1.0.1",
]
